# modulaur

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICK-START.md  README.md  build-release.ps1  cleanup-credentials.js  package-lock.json  package.json  panel-data-export-2025-12-31.json  renovate.json
.cargo/: config.toml
.github/: WORKFLOWS.md
.github/workflows/: release.yml  validate.yml
docs/: EXPORT-IMPORT.md  PLUGIN-DEPLOYMENT.md  PLUGIN-DEVELOPMENT.md  README.md  STATUS.md
docs/api/: tauri-commands.md
docs/architecture/: overview.md  plugin-loading.md
docs/guides/: DEVELOPER-SCRIPTS.md  getting-started.md  theming.md
plugins/: README.md
plugins/featured/markdown-notepad/: build.bat  manifest.json
plugins/featured/rss-feed-reader/: README.md  build.bat  manifest.json
plugins/featured/snippets/: build.bat  build.ps1  manifest.json
plugins/featured/text-converter/: README.md  build.bat  build.ps1  manifest.json
plugins/featured/time-tracker/: QUICK-START.md  README.md  build.bat  build.ps1  (+1 more)
scripts/: README.md
scripts/plugins/: build-all.ps1  build-one.ps1  deploy.js  deploy.ps1
scripts/utils/: check-size.ps1  clean-all.ps1
src/: .prettierrc  copy-plugins.js  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: .clippy.toml  Cargo.toml  download-surrealdb.ps1  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: credentials.rs  dashboard.rs  data_sources.rs  db.rs  error.rs  main.rs  models.rs  pages.rs  plugin_data.rs  prompt_gen.rs  settings.rs  sidecar.rs  tickets.rs  window.rs
src-tauri/src/adapters/: mod.rs  rest.rs
src-tauri/src/plugins/: http.rs  mod.rs
src/public/: plugins-README.md
src/src/: App.vue  diagnose-plugins.ts  main.ts  style.css  tauri.ts  test-plugins.ts  vite-env.d.ts
(+118 files in other folders)
