[package]
name = "modulaur"
version = "0.5.0"
edition = "2021"

[features]
# Default to embedded database (pure Rust, no C++ compiler needed)
default = ["embedded-db"]

# Embedded database using SurrealKV (pure Rust)
embedded-db = ["surrealdb/kv-surrealkv"]

# Sidecar database using external SurrealDB process (WebSocket client)
sidecar-db = ["surrealdb/protocol-ws"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
futures = "0.3"
chrono = "0.4"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database - Conditional based on feature flags
# Embedded mode: kv-surrealkv (pure Rust, no C++ compiler)
# Sidecar mode: WebSocket client (protocol-ws feature)
surrealdb = { version = "2", default-features = false }

# M3: HTTP client for adapters
url = "2.5"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"

# M6: Plugin system - WASM runtime and dynamic loading
wasmtime = "26.0"
wasmtime-wasi = "26.0"
anyhow = "1.0"

# M5.1: Security - Credential encryption
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

# Optimize for smaller binary size
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler
